--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.17.1",
+    "minio": "^7.0.18",
     "prettier": "^2.1.2",
     "url-join": "^4.0.1"
   },
